src/objects/MOLKPISnapshot__c.object
<CustomObject>
    <description>Weekly snapshot of all pitches</description>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advertiser_Account_Name__c</fullName>
        <label>Advertiser Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Account_Name__c</fullName>
        <label>Agency Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display_Main_Category__c</fullName>
        <label>Display Main Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Insertion_Date__c</fullName>
        <label>First Insertion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Insertion_Date__c</fullName>
        <label>Last Insertion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owners_Department__c</fullName>
        <label>Owners Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_Name__c</fullName>
        <label>Pitch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_Owner__c</fullName>
        <label>Pitch Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>MOLKPISnapshot</label>
    <nameField>
        <label>MOLKPISnapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MOLKPISnapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>